# template

general/: CMakeLists.txt
libvelocity_control/: CMakeLists.txt  Doxyfile.in  Findlibvelocity_control.cmake.in  README  angle_command.hpp  libvelocity_control.pc.in  pwm.hpp  pwm_cytron.hpp  pwm_interface.hpp
simplified_ros/: CMakeLists.txt  README  node_manager.hpp  ros_publisher.hpp  ros_subscriber.hpp
simplified_ros/scripts/: Findsimplified_ros.cmake.in
state_machine/: README
